<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros2_control_abb_demo_driver</name>
  <version>0.0.1</version>
  <description>Demo driver(s) for ros2 control</description>
  <maintainer email="dmitri.ignakov@taigarobotics.com">Dmitri</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>

  <test_depend>ament_cmake_gtest</test_depend>

  <!--<test_depend>ament_lint_auto</test_depend>-->
  <!--<test_depend>ament_lint_common</test_depend>-->
  <!--<test_depend>ament_cmake_gtest</test_depend>-->

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
