<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>abb_bringup</name>
  <version>0.0.0</version>
  <description>Launch file and run-time configurations, e.g. controllers.</description>

  <author>Andy Zelenak</author>

  <maintainer email="zelenak@picknik.ai">Andy Zelenak</maintainer>

  <license>Apache2</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>rclcpp</test_depend>
  <test_depend>abb_irb1200_5_90_moveit_config</test_depend>
  <test_depend>abb_irb1200_support</test_depend>
  <test_depend>abb_irb2600_12_185_moveit_config</test_depend>
  <test_depend>abb_irb2600_support</test_depend>
  <test_depend>abb_resources</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_cmake</test_depend>
  <test_depend>ros_testing</test_depend>
  <test_depend>trajectory_msgs</test_depend>

  <exec_depend>controller_manager</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>ros2_control</exec_depend>
  <exec_depend>ros2_controllers</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
