<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>abb_common</name>
  <version>0.0.0</version>
  <description>Package providing common function for abb_ros2</description>

  <maintainer email="gbartyzel@hotmail.com">Grzegorz Bartyzel</maintainer>

  <license>Apache2</license>
  <license>BSD-3-Clause</license>

  <author email="jon.tjerngren@se.abb.com">Jon Tjerngren</author>
  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>abb_egm_rws_managers</depend>
  <depend>abb_egm_msgs</depend>
  <depend>abb_rapid_msgs</depend>
  <depend>abb_rapid_sm_addin_msgs</depend>
  <depend>abb_robot_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
