<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>abb_hardware_interface</name>
  <version>0.0.0</version>
  <description>ABB EGM driver for ros2 control</description>

  <author email="dmitri.ignakov@taigarobotics.com">Dmitri Ignakov</author>

  <maintainer email="stephanie.eng@picknik.ai">Stephanie Eng</maintainer>
  <maintainer email="zelenak@picknik.ai">Andy Zelenak</maintainer>

  <license>Apache2</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>abb_egm_rws_managers</depend>

  <test_depend>ament_cmake_gtest</test_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
