<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>abb_hardware_interface</name>
  <version>0.0.0</version>
  <description>ABB EGM driver for ros2 control</description>

  <maintainer email="stephanie.eng@picknik.ai">Stephanie Eng</maintainer>
  <maintainer email="zelenak@picknik.ai">Andy Zelenak</maintainer>

  <license>Apache2</license>
  <license>BSD-3-Clause</license>

  <author email="dmitri.ignakov@taigarobotics.com">Dmitri Ignakov</author>
  <author email="jon.tjerngren@se.abb.com">Jon Tjerngren</author
  >
  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>abb_egm_rws_managers</depend>
  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>

  <test_depend>ament_cmake_gtest</test_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_cmake</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
