<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>abb_rws_client</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="gbartyzel@hotmail.com">Grzegorz Bartyzel</maintainer>
  <maintainer email="yadunund@gmail.com">Yadunund</maintainer>
  <license>Apache2</license>

  <depend>rclcpp</depend>
  <depend>abb_egm_rws_managers</depend>
  <depend>sensor_msgs</depend>
  <depend>abb_egm_msgs</depend>
  <depend>abb_rapid_msgs</depend>
  <depend>abb_robot_msgs</depend>
  <depend>abb_rapid_sm_addin_msgs</depend>
  <depend>abb_hardware_interface</depend>

  <test_depend>ament_cmake_gtest</test_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
