<?xml version="1.0" ?>
<package format="2">
  <name>abb_irb2600_support</name>
  <version>0.0.0</version>
  <description>
    <p>
      ROS-Industrial support for the ABB IRB 1200 (and variants).
    </p>
    <p>
      This package contains configuration data, 3D models and launch files
      for ABB IRB 1200 manipulators. This currently includes the IRB 1200-5/0.9
      and the IRB 1200-7/0.7 variants.
    </p>
    <p>
      Joint limits and max joint velocities are based on the information in the
      <em>ABB IRB 1200 Datasheet</em>, document ID: <em>ROB0275EN_A, Sept 2016</em>.
      All urdfs / xacros are based on the default motion and joint velocity
      limits, unless noted otherwise (ie: no support for high speed joints,
      extended / limited motion ranges or other options).
    </p>
    <p>
      Note 1: inertial and dynamics values for the 5/0.9 variant were calculated
      from the meshes using <em>Meshlab</em>, assuming constant density.
      As the datasheet only provides the mass of the entire robot,
      the mass of each link was estimated based on its volume, assuming
      constant density for the entire robot.
    </p>
    <p>
      Note 2: maximum joint effort values for the 5/0.9 variant do not
      correspond to real world limits of the robot. The current values were
      chosen to accomodate Gazebo simulations of this specific variant but
      are fictional values.
    </p>
    <p>
      Before using any of the configuration files and / or meshes included
      in this package, be sure to check they are correct for the particular
      robot model and configuration you intend to use them with.
    </p>
  </description>
  <author>Geoffrey Chiou (Southwest Research Institute)</author>
  <maintainer email="levi.armstrong@swri.org">Levi Armstrong (Southwest Research Institute)</maintainer>
  <license>Apache2</license>

  <url type="website">http://wiki.ros.org/abb_irb2600_support</url>
  <url type="bugtracker">https://github.com/ros-industrial/abb_experimental/issues</url>
  <url type="repository">https://github.com/ros-industrial/abb_experimental</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
      <build_type>ament_cmake</build_type>
    <!-- <architecture_independent/> -->
  </export>
</package>
