<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>abb_irb6640_support</name>
  <version>0.0.0</version>
  <description>
    <p>
      Support for the ABB IRB 6640 (and variants). (Taken from ros_inustrial https://github.com/ros-industrial/abb)
    </p>
    <p>
      This package contains configuration data, 3D models and launch files
      for ABB IRB 6640 manipulators. This currently includes the
      IRB 6640-185/2.8m (6640-185) only.
    </p>
    <p>
      Joint limits and max joint velocities are based on the information in the
      <a href="http://www.abbrobots.co.uk/en/3HAC028284-en.pdf">ABB IRB 6640
      technical data sheet</a> (Version: 3HAC 028284-001 Rev. N). All urdfs /
      xacros are based on the default motion and joint velocity limits, unless
      noted otherwise (ie: no support for high speed joints, extended / limited
      motion ranges or other options).
    </p>
    <p>
      Before using any of the configuration files and / or meshes included
      in this package, be sure to check they are correct for the particular
      robot model and configuration you intend to use them with.
    </p>
  </description>
  <author>Dan Solomon (Southwest Research Institute)</author>
  <maintainer email="levi.armstrong@swri.org">Levi Armstrong (Southwest Research Institute)</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>xacro</exec_depend>

  <test_depend>ament_cmake_pytest</test_depend>
  <test_depend>launch_testing_ament_cmake</test_depend>
  <test_depend>launch_testing_ros</test_depend>
  <test_depend>liburdfdom-tools</test_depend>
  <test_depend>xacro</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
